メッセージ修正

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<h2><span>Message</span></h2>
 	</header>
 	<div class="innerS">
-		ちかごろ世間で日本歴史の科学的研究ということがしきりに叫ばれている。科学的研究というのが近代史学の学問的方法による研究という意義であるならば、これは史学の学徒の間においては一般に行われていることであるから、今さらこと新しくいうには及ばないはずである。上にいったようなことがらについては、曖昧あいまいな態度をとり、または真実でない知識を強いて注入していたことも、明かな事実である。
+		テンプレートを使って編集してます。記載あるのはテンプレートの内容なので、ご留意ください。
 	</div>
 </section>
 <!-- // MESSAGE -->
@@ -113,7 +113,7 @@
 	<div class="innerS">
 		<ul class="col2">
 			<li>
-				<p>〒103-1234<br>見本県見本市仮区見本町1-3-5</p>
+				<p>〒000-0000<br>日本のどこか</p>
 				<p>TEL 01234-567-8901</p>
 				<p>e-Mail info@example.com</p>
 				<p>営業時間 10:00〜20:00（水曜定休）</p>
